Use getFirst/getLast methods on collections